# mlops_churn

./: .pre-commit-config.yaml  .travis.yml  .workspace-config.json  Guide.ipynb  README.md  build_baseline_images.sh  churn_library.py  churn_script_logging_and_tests.py  churn_script_logging_and_tests.py.patch  execute_tests.sh  pyproject.toml  pytest.main
.github/workflows/: python-app.yml
git-hooks/config/: .pylintrc  pylint.ini
mlops_churn/: churn_library.py
models/: logistic_model.pkl
notebooks/: churn_notebook.ipynb
test/: churn_script_logging_and_tests.py
tests/: churn_script_logging_and_test.py  churn_script_logging_and_tests.py  conftest.py
