[tool.poetry]
name = "mlops_churn"
version = "0.1.0"
description = "A basic module for customer churn predictions"
authors = ["Francesco Parisio <francesco.parisio@protonmail.com>"]
packages = [{include = "mlops_churn"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "0.24.1"
shap = "0.40.0"
joblib = "1.0.1"
pandas = "^1.4.4"
numpy = "^1.23.3"
matplotlib = "3.3.4"
seaborn = "0.11.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.2"
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
